# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-comp"
version = "0.1.0"
description = "A simple way to distribute the computing work among a group of process-independent (or thread-independent) agents."
readme = "README.md"
authors = [{ name = "NiL", email = "csningli@qq.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["agent", ]
dependencies = [
    'blas = 1.0',
    'ca-certificates = 2021.10.26', 
    'certifi = 2021.10.8', 
    'intel-openmp = 2021.4.0', 
    'libcxx = 12.0.0',
    'libffi = 3.3',
    'libgfortran = 3.0.1',
    'libsodium = 1.0.18',
    'mkl = 2021.4.0', 
    'mkl-service = 2.4.0', 
    'mkl_fft = 1.3.1', 
    'mkl_random = 1.2.2', 
    'ncurses = 6.3', 
    'numpy = 1.21.2', 
    'numpy-base = 1.21.2', 
    'openssl = 1.1.1m', 
    'pip = 21.2.2', 
    'psutil = 5.8.0', 
    'pyzmq = 22.3.0', 
    'readline = 8.1', 
    'six = 1.16.0', 
    'tk = 8.6.11', 
    'wheel = 0.37.0', 
    'xz = 5.2.5', 
    'zeromq = 4.3.4', 
    'zlib = 1.2.11', 
]

requires-python = ">=3.7.11"

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/csningli/multi-agent-comp"

